fix layout issue in printer page

--- a/src/styles/Printer.css
+++ b/src/styles/Printer.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 80vh;
+    height: fit-content !important;
+    /* min-height: 80vh; */
     justify-content: space-around;
 }
 
@@ -36,6 +37,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 120%;
 }
 
 .pt_gray {
